# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  mishell.txt  test.c  test_backup.c  tmp.md
.github/workflows/: makefile.yml
include/: macro.hbackup  minishell.h  pipex.h
libft/: Makefile  README.md  test.c
libft/ft_printf/: ft_printf.c  ft_printf_cs.c  ft_printf_diu.c  ft_printf_hex.c  ft_printf_p.c
libft/gnl/: get_next_line.c  get_next_line_utils.c
libft/include/: ft_printf.h  get_next_line.h  libft.h
libft/isto/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_tolower.c  ft_toupper.c
libft/llst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/mem/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
libft/put_fd/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/str_lib/: ft_atoi.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c
libft/str_nonlib/: ft_itoa.c  ft_split.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strtrim.c  ft_substr.c
src/: ft_echo.c  ft_malloc.c  ft_strcspn.c  ft_strncpy.c  ft_strtok.c  minishell.c  minishell_util.c  parse_cmd_to_list.c  parsecmd.c  pipex.c  pipex_util.c  truncate_cmd.c  truncate_cmd.cbackup
src/built-in/: dispatchcmd.c  env.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/deque/: deque_create.c  deque_delete.c  deque_read.c  (+2 more)
(+49 files in other folders)
